tests/ui/cfg/field_sneaky.stderr
error[E0027]: pattern does not mention field `__field`
  --> $DIR/field_sneaky.rs:11:14
   |
11 | #[pin_project] //~ ERROR pattern does not mention field `__field`
   |              ^ missing field `__field`
